<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextoBlanco"
    tools:context=".CrearCuenta">
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/correo"/>
            <EditText
                android:id="@+id/Usuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/usuario"/>
            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nombre"/>
            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/ConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirmar_contrase_a"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telefono"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/FechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date"/>

            <Button
                android:id="@+id/Unete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-black"
                android:onClick="unetee"
                android:text="UNETE"
                android:textColor="@color/colorPrimary"
                android:theme="@style/TransparenciaBoton"
                app:cornerRadius="20dp"></Button>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>